fix spacing

--- a/css/about.css
+++ b/css/about.css
@@ -3,3 +3,7 @@
   flex-direction: row;
   margin: 10px 15px;
 }
+
+.about-column {
+  margin: 0 25px;
+}
